--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@pdftron/pdfjs-express-viewer": "^8.7.4"
+		"@inkdropapp/html2markdown": "^3.2.1",
+		"@pdftron/pdfjs-express-viewer": "^8.7.4",
+		"fast-xml-parser": "^4.3.2"
 	}
 }
