--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 		"move-static": "cp -a ./node_modules/@pdftron/pdfjs-express-viewer/public/. ./static/pdfjsexpress"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-cloudflare": "^2.3.2",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-cloudflare": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -26,12 +27,13 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@inkdropapp/html2markdown": "^3.2.1",
 		"@pdftron/pdfjs-express-viewer": "^8.7.4",
-		"fast-xml-parser": "^4.3.2"
+		"fast-xml-parser": "^4.3.2",
+		"rfc4648": "^1.5.3"
 	}
 }
