--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@inkdropapp/html2markdown": "^3.2.1",
+		"@nest25/banksy-sdk": "^1.0.34",
 		"@pdftron/pdfjs-express-viewer": "^8.7.4",
 		"fast-xml-parser": "^4.3.2",
 		"rfc4648": "^1.5.3"
